# kak-plugins

./: Cargo.toml  Rakefile  buffer-list.kak  multiple-cursors-warnings.kak
kak-folder/: Cargo.toml  README.md  fold.kak
kak-folder/src/: main.rs
kak-folder/tests/: cli_tests.rs
kak-sort-diagnostics/: Cargo.toml  README.md
kak-sort-diagnostics/src/: main.rs
kak-unbalanced/: .gitignore  README.md  build.zig  build.zig.zon
kak-unbalanced/plugin/: kak-unbalanced.kak
kak-unbalanced/src/: main.zig  root.zig
kak-unbalanced/test_files/: smiley.txt
kak-univ-search/: Cargo.toml  README.md
kak-univ-search/.cargo/: config.toml
kak-univ-search/plugin/: universal-search.kak
kak-univ-search/src/: handle_context.rs  kakoune.rs  main.rs  process.rs  string_ext.rs  temp_dir.rs
kak-univ-search/src/processors/: buffer.rs  buffer_list.rs  fd.rs  fzf.rs  global.rs  mod.rs  rg.rs
