[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
debug = false
panic = "abort"
[package]
name = "kak-univ-search"
version = "0.1.0"
edition = "2024"

[dependencies]
daemonize = "0.5.0"
libc = "0.2.179"
nix = { version = "0.30.1", features = ["fs"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "fs", "io-util", "process", "sync", "rt-multi-thread"] }
